<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<!-- PARENT INFO -->
	<parent>
		<groupId>org.tedros</groupId>
		<artifactId>tdrs-fx</artifactId>
		<version>17-0.0.1</version>
	</parent>

	<!-- MODULE INFO -->
	<artifactId>tedros-fx-api</artifactId>
	<packaging>jar</packaging>

	<name>tedros-fx-component</name>
	<description>The tedros javafx components</description>

	<!-- DEPENDENCIES -->
	<dependencies>
		<dependency>
			<groupId>org.tedros</groupId>
			<artifactId>tedros-core</artifactId>
			<version>17-0.0.1</version>
			<scope>compile</scope>
			<exclusions>
				<exclusion>
					<groupId>xml-apis</groupId>
  					<artifactId>xml-apis</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		
		<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-controls</artifactId>
		    <version>${javafx.version}</version>
		</dependency>
		
		<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-fxml</artifactId>
		    <version>${javafx.version}</version>
		</dependency>
		
		<dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-web</artifactId>
		    <version>${javafx.version}</version>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons.io.version}</version>
		</dependency>

		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>${commons.logging.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>${commons-collections.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons.lang.version}</version>
		</dependency>

		<dependency>
			<groupId>net.sf.barcode4j</groupId>
			<artifactId>barcode4j</artifactId>
			<version>2.1</version>
			
		</dependency>
		<dependency>
			<groupId>com.github.kenglxn.qrgen</groupId>
			<artifactId>javase</artifactId>
			<version>2.6.0</version>
			<exclusions>
				<exclusion>
					<groupId>xml-apis</groupId>
  					<artifactId>xml-apis</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- <dependency> jsoup HTML parser library @ http://jsoup.org/ <groupId>org.jsoup</groupId> 
			<artifactId>jsoup</artifactId> <version>1.8.1</version> </dependency> -->

	</dependencies>

	<properties>
    	<maven.compiler.release>17</maven.compiler.release>
  	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
		</plugins>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
			<resource>
				<directory>src/main/java</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
	</build>

	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>Tedros-Box</id>
			<name>GitHub Tedros Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/tedros-box/package</url>
			<uniqueVersion>false</uniqueVersion>
		</repository>
	</distributionManagement>

</project>
